Added Swagger and began to add s3 for saving images
