# server/dto/operators.go
@@ -6,11 +6,10 @@ const (
 )
 
 type AddCarReq struct {
-	Model    string `json:"model" example:"BMW"`
-	Series   string `json:"series" example:"M5"`
-	Number   string `json:"number" example:"AX1234XA"`
-	Status   string `json:"status" example:"available"`
-	ImageUrl string `json:"image_url" example:"http://photo/car-1223urhfrvndvnofvsd.jpg"`
+	Model  string `json:"model" example:"BMW"`
+	Series string `json:"series" example:"M5"`
+	Number string `json:"number" example:"AX1234XA"`
+	Status string `json:"status" example:"available"`
 } //@name AddCarReq
 
 type AssignCarToDriverReq struct {
